Added default security provided by spring boot 3.0